--- a/Admin.Web.UI/Views/Product/Add.cshtml
+++ b/Admin.Web.UI/Views/Product/Add.cshtml
@@ -5,105 +5,161 @@
 }
 
 <div class="row">
-    <div class="card">
-        @if (TempData["Message"] != null)
-        {
-            <div class="alert alert-success">
-                <p><strong>Başarılı</strong>  @TempData["Message"]</p>
+
+    <div class="col-md-8 col-md-offset-2">
+        <div class="card">
+            <div class="card-header">
+                <h4>Ürün Ara</h4>
+                <br />
+                <div class="text-red">@Html.ValidationSummary()</div>
+                @*<ul class="card-actions">
+                    <li>
+                        <button type="button"><i class="ion-more"></i></button>
+                    </li>
+                </ul>*@
             </div>
-        }
-        <div class="card-header">
-            <h4>Ürün Ekleme Formu</h4>
-            <div class="text text-danger">@Html.ValidationSummary()</div>
-            <ul class="card-actions">
-                <li>
-                    <button type="button"><i class="ion-more"></i></button>
-                </li>
-            </ul>
-        </div>
-        <div class="card-block">
-            @using (Html.BeginForm("Add", "Product", FormMethod.Post, new { @class = "form-horizontal" }))
+            <div class="card-block">
+                @using (Html.BeginForm("CheckBarcode", "Product", FormMethod.Get, new { @class = "form-horizontal", id = "frmSearch" }))
             {
-                @Html.AntiForgeryToken()
                 <div class="form-group">
-                    @Html.LabelFor(x => x.Barcode, new { @class = "col-md-3 control-label" })
+                    <label for="txtSearch" class="col-md-3 control-label">Ürün Ara</label>
                     <div class="col-md-7">
-                        @Html.TextBoxFor(x => x.Barcode, new { @class = "form-control", placeholder = "Ürün Barkod" })
+                        <input type="text" id="txtSearch" class="form-control" , placeholder="Barkoda göre ürün arama" />
                     </div>
                 </div>
+                <div class="form-group m-b-0">
+                    <div class="col-md-9 col-md-offset-3">
+                        <button class="btn btn-app" type="submit">Ara</button>
+                    </div>
+                </div>
+        }
+            </div>
+        </div>
+        @if (TempData["Message"] != null)
+    {
+        <div class="alert alert-success">
+            <p><strong>Başarılı!</strong> @TempData["Message"]</p>
+        </div>
+}
+        <div class="card">
+            <div class="card-header">
+                <h4>Ürün Ekleme Formu</h4>
+                <br />
+                <div class="text-red">@Html.ValidationSummary()</div>
+                @*<ul class="card-actions">
+                    <li>
+                        <button type="button"><i class="ion-more"></i></button>
+                    </li>
+                </ul>*@
+            </div>
+            <div class="card-block">
+                @using (Html.BeginForm("Add", "Product", FormMethod.Post, new { @class = "form-horizontal" }))
+            {
+                @Html.AntiForgeryToken()
                 <div class="form-group">
                     @Html.LabelFor(x => x.ProductName, new { @class = "col-md-3 control-label" })
                     <div class="col-md-7">
                         @Html.TextBoxFor(x => x.ProductName, new { @class = "form-control", placeholder = "Ürün Adı" })
+                        <br /><span class="text-red">@Html.ValidationMessageFor(x => x.ProductName)</span>
                     </div>
                 </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(x => x.ProductType, new { @class = "col-md-3 control-label" })
-                    <div class="col-md-7">
-                        @Html.EnumDropDownListFor(x => x.ProductType, "Ürün Tipi", new { @class = "form-control" })
-                    </div>
-                </div>
-
                 <div class="form-group">
                     @Html.LabelFor(x => x.CategoryID, new { @class = "col-md-3 control-label" })
                     <div class="col-md-7">
-                        @Html.DropDownListFor(x => x.CategoryID, (List<SelectListItem>)ViewBag.CategoryList,
-          new { @class = "form-control", size = "1" })
+                        @Html.DropDownListFor(x => x.CategoryID, (List<SelectListItem>)ViewBag.CategoryList, new { @class = "form-control", size = "1" })
                     </div>
                 </div>
-
                 <div class="form-group">
                     @Html.LabelFor(x => x.SupProductID, new { @class = "col-md-3 control-label" })
                     <div class="col-md-7">
-                        @Html.DropDownListFor(x => x.SupProductID, (List<SelectListItem>)ViewBag.ProductList,
-          new { @class = "form-control", size = "1" })
+                        @Html.DropDownListFor(x => x.SupProductID, (List<SelectListItem>)ViewBag.ProductList, new { @class = "form-control", size = "1" })
                     </div>
                 </div>
-
                 <div class="form-group">
-                    @Html.LabelFor(x => x.SalesPrice, new { @class = "col-md-3 control-label" })
+                    @Html.LabelFor(x => x.Barcode, new { @class = "col-md-3 control-label" })
                     <div class="col-md-7">
-                        @Html.TextBoxFor(x => x.SalesPrice, new { @class = "form-control", placeholder = "Satış Fiyatı", type = "number", step = "1" })
+                        @Html.TextBoxFor(x => x.Barcode, new { @class = "form-control", placeholder = "Barcode" })
+                        <br /><span class="text-red">@Html.ValidationMessageFor(x => x.Barcode)</span>
                     </div>
                 </div>
-
                 <div class="form-group">
                     @Html.LabelFor(x => x.BuyPrice, new { @class = "col-md-3 control-label" })
                     <div class="col-md-7">
-                        @Html.TextBoxFor(x => x.BuyPrice, new { @class = "form-control", placeholder = "Alış Fiyatı", type = "number", step = "1" })
+                        @Html.TextBoxFor(x => x.BuyPrice, new { @class = "form-control", placeholder = "Alış Fiyatı" })
+                        <br /><span class="text-red">@Html.ValidationMessageFor(x => x.BuyPrice)</span>
                     </div>
                 </div>
-
                 <div class="form-group">
-                    @Html.LabelFor(x => x.UnitsInStock, new { @class = "col-md-3 control-label" })
+                    @Html.LabelFor(x => x.SalesPrice, new { @class = "col-md-3 control-label" })
                     <div class="col-md-7">
-                        @Html.TextBoxFor(x => x.UnitsInStock, new { @class = "form-control", placeholder = "Stok", type = "number", step = "1" })
+                        @Html.TextBoxFor(x => x.SalesPrice, new { @class = "form-control", placeholder = "Satış Fiyatı" })
+                        <br /><span class="text-red">@Html.ValidationMessageFor(x => x.SalesPrice)</span>
                     </div>
                 </div>
-
                 <div class="form-group">
-                    @Html.LabelFor(x => x.Quantity, new { @class = "col-md-3 control-label" })
+                    @Html.LabelFor(x => x.ProductType, new { @class = "col-md-3 control-label" })
                     <div class="col-md-7">
-                        @Html.TextBoxFor(x => x.Quantity, new { @class = "form-control", placeholder = "Adet", type = "number", step = "1" })
+                        @Html.EnumDropDownListFor(x => x.ProductType, "Seçiniz", new { @class = "form-control", size = "1" })
+                        <br /><span class="text-red">@Html.ValidationMessageFor(x => x.ProductType)</span>
                     </div>
                 </div>
-
                 <div class="form-group">
                     @Html.LabelFor(x => x.Description, new { @class = "col-md-3 control-label" })
                     <div class="col-md-7">
-                        @Html.TextBoxFor(x => x.Description, new { @class = "form-control", placeholder = "Ürün Bilgisi", type = "text", step = "1" })
+                        @Html.TextBoxFor(x => x.Description, new { @class = "form-control", placeholder = "Açıklama" })
+                        <br /><span class="text-red">@Html.ValidationMessageFor(x => x.Description)</span>
                     </div>
                 </div>
-
+                <div class="form-group">
+                    @Html.LabelFor(x => x.Quantity, new { @class = "col-md-3 control-label" })
+                    <div class="col-md-7">
+                        @Html.TextBoxFor(x => x.Quantity, new { @class = "form-control", placeholder = "Birim", type = "number" })
+                        <br /><span class="text-red">@Html.ValidationMessageFor(x => x.Quantity)</span>
+                    </div>
+                </div>
                 <div class="form-group m-b-0">
                     <div class="col-md-9 col-md-offset-3">
                         <button class="btn btn-app" type="submit">Ürün Ekle</button>
-
                     </div>
                 </div>
-            }
+        }
+            </div>
         </div>
     </div>
 </div>
 
+@section bottomSection
+{
+    <script src="~/assets/js/plugins/bootstrap-notify/bootstrap-notify.min.js"></script>
+    <script>
+        $(function() {
+            $("#frmSearch").submit(function(e) {
+                e.preventDefault();
+                $.ajax({
+                    url: '@Url.Action("CheckBarcode","Product")' + "?barcode=" + $("#txtSearch").val(),
+                    method: "get",
+                    dataType:"json"
+                }).done(function (response) {
+                    var audio = new Audio('../../../assets/Audio/beep.mp3');
+                    audio.play();
+                   $.notify({
+                            // options
+                            message: response.message,
+                            title: 'Barcode Servis Mesajı'
+                    },
+                    {
+                        // settings
+                        type: response.success ? "success" : "danger"
+                    });
+                    if (response.data != null) {
+                        var data = response.data;
+                        $("#ProductName").val(data.Name);
+                        $("#Barcode").val(data.Barcode);
+                        $("#SalesPrice").val(data.Price.toString().replace(".",","));
+                        $("#txtSearch").val("");
+                    }
+                });
+            });
+        })
+    </script>
+}
